# docs/api/openapi.yaml
@@ -1365,8 +1365,6 @@ components:
                 items:
                   type: string
                   format: uuid
-              isStopListed:
-                type: boolean
             required:
               - id
               - slug
@@ -1386,7 +1384,6 @@ components:
               - nutritionEstimated
               - sizes
               - modifierGroupIds
-              - isStopListed
         modifierGroups:
           type: array
           items:
@@ -1568,8 +1565,6 @@ components:
           items:
             type: string
             format: uuid
-        isStopListed:
-          type: boolean
       required:
         - id
         - slug
@@ -1589,7 +1584,6 @@ components:
         - nutritionEstimated
         - sizes
         - modifierGroupIds
-        - isStopListed
     CategoryListResponseDto:
       type: object
       properties:
